# avroc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml
src/avroc/: __init__.py  schema.pyx  version.py
tests/: conftest.py  test_avroc.py  test_encode.py  test_schema.py
