[build-system]
requires = [
    "setuptools >= 42",
    "wheel >= 0.30.0",
    "setuptools_scm[toml]>=3.4",
    "Cython >= 0.29.21",
    "pkgconfig >= 1.5",
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120

[tool.setuptools_scm]
write_to = "src/avroc/version.py"
write_to_template = """
\"\"\" Version information \"\"\"
__version__ = "{version}"
"""
