[metadata]
name = avroc
description = wrap c avro for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://avroc.readthedocs.org/
author = Bernat Gabor
maintainer = Bernat Gabor
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
author-email = gaborjbernat@gmail.com
keywords = avroc
maintainer-email = gaborjbernat@gmail.com
project_urls =
    Source=https://github.com/gaborbernat/avroc
    Tracker=https://github.com/gaborbernat/avroc/issues

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    pytest >= 6.0.0rc1
    coverage >= 5.1
    pytest-mock >= 2

[options.packages.find]
where = src

[sdist]
formats = gztar

[tool:pytest]
junit_family = xunit2
addopts = --tb=auto -ra --showlocals
